--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/source/src/app/components/Login/login.css
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/source/src/app/components/Login/login.css
@@ -166,6 +166,10 @@
         width: 100%;
     }
 }
+footer{
+    position: absolute;
+    bottom: 0;
+}
 .header-default h1{
     font-size: 18px;
     display: inline-block;
